--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ env:
 jobs:
   build_linux_x64:
     name: Build Linux
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v3
     - name: Make out dir
@@ -32,7 +32,7 @@ jobs:
 
   build_macos_x64:
     name: Build MacOS x64
-    runs-on: macOS-latest
+    runs-on: macos-11
     steps:
     - uses: actions/checkout@v3
     - name: Make out dir
